# Calculatorwebapp

./: .coverage  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: 1-oidc-setup.yml  2-ci.yml  3-infrastructure.yml  4-cd.yml  5-app-security.yml  6-metrics-dashboard.yml  GCP OIDC Verify.yml  cd-azure-webapp.yml  ci.yaml  infra-deploy.yml  metrics-dashboard.yml  security.yml
app/: __init__.py  calculator.py  config.py  main.py
app/static/: index.html
infra/: README.md  main.bicep  params.dev.json
metrics/: main.py  render_dashboard.py
site/: dashboard.html  dependency.json  index.html  metrics.json  uptime.csv
tests/: test_api.py  test_calculator.py
